--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "engines": {
     "node": ">=14.0.0",
     "npm": ">=8.11.0",
-    "yarn": "please-use-npm"
+    "yarn": "please-use-npm",
+    "lint": "next lint"
   },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "next": "13.3.0",
@@ -25,6 +27,7 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "prettier": "^2.8.7",
     "typescript": "5.0.4"
   }
 }
