--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "13.3.0",
@@ -27,6 +28,7 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "husky": "^8.0.3",
     "prettier": "^2.8.7",
     "typescript": "5.0.4"
   }
